header issues fixed on mobile and full view

--- a/fullstack-ecommerce-main/src/frontend/src/Component/MainNaivgationComp/MainNavigation.css
+++ b/fullstack-ecommerce-main/src/frontend/src/Component/MainNaivgationComp/MainNavigation.css
@@ -13,6 +13,13 @@
   }
 }
 
+@media (max-width: 767px) {
+  .top__header .top__wrapper .account__wrap .cart {
+      background-color: transparent;
+      width: 40px !important;
+  }
+}
+
 .cart-icon {
   color: white;
 }
